test/indexReplaceError2.slq

def main(){
	a:=vector(1,0:ğ”¹);
	a[0]:=H(a[0]);
	(a[0],b):=(a[0],a); /// error
	__show(__query("dep",__tmp3)); /// TODO error
	return __tmp3; /// TODO error
}
